# location_CS50

./: .gitignore  .replit  LICENSE  README.md  application.py  aux_save.py  helpers.py  location.db  main.py  pyproject.toml  requirements.txt
static/: styles.css
storage/colab/: 2022-01-11T00:59:53.372_2.txt
storage/santiago/: 2022-01-11T11:51:43.990_101.txt  2022-01-11T13:01:08.838_18.txt
templates/: admin.html  apology.html  blank.html  custom.html  device.html  how.html  index.html  inputapplocation.html  layout.html  layout_map.html  layout_nav.html  location.html  map.html  map_custom.html  map_test.html  map_test1.html  map_test_copy.html  maplocation.html  postjson.html  script.js  script_geral.js  script_lastmap.js  script_points.js
