[tool.poetry]
name = "repl_python3_locationcs50"
version = "0.1.0"
description = ""
authors = ["bluisfernandes <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
geojson = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
